fix: thumbnail spacing on CardSelector (#1268)

--- a/src/components/CardSelector/CardSelector.scss
+++ b/src/components/CardSelector/CardSelector.scss
@@ -63,14 +63,6 @@ $cardSelector-height: 58px;
     color: var(--color-dark_plain60);
 }
 
-.moonstone-cardSelector_thumbnail {
-    margin-right: var(--spacing-small);
-}
-
-.moonstone-cardSelector_actions {
-    margin-left: auto;
-}
-
 .moonstone-cardSelector_error {
     gap: var(--spacing-nano);
     width: 100%;
